src/objects/Gender__c.object
<CustomObject>
    <fields>
        <fullName>Test_DateTime__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Test DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_TextLong__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Test TextLong</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test URL</label>
        <type>Url</type>
    </fields>
    <label>Encryption test</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Gender Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encryption test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>